# desmume

./: .gitignore  README.md  work.md
.github/ISSUE_TEMPLATE/: new-issue--bug-report--question.md
.github/workflows/: build.yml  build_interface.yml  build_win.yml  release_tarball.yml
desmume/: ChangeLog  README  README.INT  README.LIN  README.MAC
desmume/src/: Database.cpp  FIFO.cpp  GPU.cpp  GPU.h  GPU_Operations.cpp  GPU_Operations.h  GPU_Operations_AVX2.cpp  GPU_Operations_AVX2.h  GPU_Operations_AltiVec.cpp  GPU_Operations_AltiVec.h  GPU_Operations_NEON.cpp  GPU_Operations_NEON.h  GPU_Operations_SSE2.cpp  GPU_Operations_SSE2.h  MMU.cpp  NDSSystem.cpp  OGLRender.cpp  OGLRender.h  OGLRender_3_2.cpp  OGLRender_3_2.h  OGLRender_ES3.cpp  OGLRender_ES3.h  ROMReader.cpp  SPU.cpp  arm_instructions.cpp  armcpu.cpp  bios.cpp  cheatSystem.cpp  commandline.cpp  common.cpp  cp15.cpp  debug.cpp  gfx3d.cpp  matrix.cpp  matrix.h  mc.cpp  mic.cpp  movie.cpp  rasterize.cpp  rasterize.h  (+8 more)
desmume/src/addons/: slot2_gbagame.cpp  slot2_mpcf.cpp
desmume/src/filter/: 2xsai.cpp  bilinear.cpp  deposterize.cpp  hq2x.cpp  hq3x.cpp  hq4x.cpp  interp.h  videofilter.cpp  videofilter.h
desmume/src/frontend/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desmume/src/frontend/tauri/src-tauri/capabilities/: default.json
desmume/src/frontend/tauri/src-tauri/src/: lib.rs  main.rs
desmume/src/gdbstub/: Makefile.am  gdbstub.cpp
desmume/src/utils/: datetime.h  dlditool.cpp  glcorearb.h  guid.cpp  xstring.cpp
tools/ds_tests/armwrestler/: Makefile
tools/ds_tests/matrixStack/: Makefile
(+544 files in other folders)
