[package]
name = "desmume-tauri"
version = "0.1.0"
description = "Tauri frontend prototype for DeSmuME"
authors = ["DeSmuME team"]
license = "GPL-2.0-or-later"
repository = "https://github.com/TASEmulators/desmume"
edition = "2021"
rust-version = "1.77"
build = "build.rs"

[lib]
name = "desmume_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
